Filas y Columnas Bootstrap

--- a/src/app/area-de-contenido/area-de-contenido.component.css
+++ b/src/app/area-de-contenido/area-de-contenido.component.css
@@ -2,3 +2,17 @@
     background-color: aqua;
     height: 20rem;
 }
+
+.C1-F1 {
+    height: 10rem;
+}
+.C1-F2 {
+    height: 10rem;
+}
+
+.C2-F1 {
+    height: 10rem;
+}
+.C2-F2 {
+    height: 10rem;
+}
