--- a/src/app/area-de-contenido/area-de-contenido.component.html
+++ b/src/app/area-de-contenido/area-de-contenido.component.html
@@ -3,21 +3,30 @@
 </div> -->
 
 <div class="colmenu">
-    <div class="row">
-        <div class="col-6">
-            <div class="row">
-                <div class="col-6 w-100">
+    <div class="row F1">
+        <div class="col-6 C1">
+            <div class="row C1-F1">
+                <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
                     <p>C1-F1</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6 w-100">
+            <div class="row C1-F2">
+                <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
                     <p>C1-F2</p>
                 </div>
             </div>
         </div>
-        <div class="col-2 w-50">
-            <p>C2-F1</p>
+        <div class="col-6 C2">
+            <div class="row C2-F1">
+                <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
+                    <p>C2-F1</p>
+                </div>
+            </div>
+            <div class="row C2-F2">
+                <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
+                    <p>C2-F2</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
