Filas y columnas bien hechas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
       <app-toolbar></app-toolbar>
     </div>
   </div>
-  <div class="row">
-    <div class="col-2">
+  <div class="row F1">
+    <div class="col-2 ps-0 pe-0">
       <app-menu-izquierda></app-menu-izquierda>
     </div>
-    <div class="col-10">
+    <div class="col-10 ps-0 pe-0">
       <app-area-de-contenido></app-area-de-contenido>
     </div> 
   </div>
