--- a/src/app/menu-izquierda/menu-izquierda.component.html
+++ b/src/app/menu-izquierda/menu-izquierda.component.html
@@ -1,6 +1,12 @@
-<div class="d-flex align-items-center justify-content-md-center colmenu">
+<!-- <div class="d-flex align-items-center justify-content-md-center colmenu">
     <p>Menu works!</p>
+</div> -->
+
+<div class="colmenu">
+    <div class="row F1">
+        <div class="col d-flex align-items-center justify-content-md-center">
+            <p>Prueba </p>
+        </div>
+    </div>
 </div>
-
-
 
