--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,12 +1,16 @@
-<div class="d-flex align-items-center justify-content-md-center colmenu">
-    <nav class="navbar navbar-light bg-light w-100">
-        <div class="container-fluid">
-            <a class="navbar-brand">Navbar</a>
-            <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+<div class="colmenu">
+    <div class="row F1">
+        <div class="col C1">
+            <nav class="navbar navbar-light bg-light w-100">
+                <div class="container-fluid">
+                    <a class="navbar-brand">Navbar</a>
+                    <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </div>
 </div>
 
