--- a/src/app/area-de-contenido/area-de-contenido.component.html
+++ b/src/app/area-de-contenido/area-de-contenido.component.html
@@ -7,26 +7,38 @@
         <div class="col-6 C1">
             <div class="row C1-F1">
                 <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
-                    <p>C1-F1</p>
+                    <p>
+                        C1-F1<br>
+                        Producto 1
+                    </p>
                 </div>
             </div>
             <div class="row C1-F2">
                 <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
-                    <p>C1-F2</p>
+                    <p>
+                        C1-F2<br>
+                        Producto 2
+                    </p>
                 </div>
             </div>
         </div>
         <div class="col-6 C2">
             <div class="row C2-F1">
                 <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
-                    <p>C2-F1</p>
+                    <p>
+                        C2-F1<br>
+                        Producto 3
+                    </p>
                 </div>
             </div>
             <div class="row C2-F2">
-                <div class="col-6 d-flex align-items-center justify-content-md-center w-100">
-                    <p>C2-F2</p>
-                </div>
+                <div class="col-6 d-flex align-items-center justify-content-md-center w-100 ">
+                    <p>
+                        C2-F2<br>
+                        Producto 4
+                    </p>
             </div>
         </div>
     </div>
 </div>
+
